// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render correctly when fullWidth & required props are falsy 1`] = `
.c1 {
  margin: 0px 8px 8px 0px;
  color: #012040;
  display: block;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  color: #818A91;
}

.c0 .c3 {
  display: block;
}

.c2 {
  padding: 10px;
  margin: 0px 8px 8px 0px;
  font-size: 14px;
  font-weight: 400;
  color: #012040;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 3px;
}

.c2:focus {
  border-color: #012040;
  outline: 0;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      Email Address
    </label>
    <input
      class="c2"
      label="Email Address"
      placeholder="Enter Email Address"
      type="email"
    />
    <span
      class="c3 c4"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;

exports[`Input component should render correctly when label and description are not given 1`] = `
.c0 .c2 {
  display: block;
}

.c1 {
  padding: 10px;
  margin: 0px 8px 8px 0px;
  font-size: 14px;
  font-weight: 400;
  color: #012040;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 3px;
}

.c1:focus {
  border-color: #012040;
  outline: 0;
}

.c1::-webkit-input-placeholder {
  color: #999999;
}

.c1::-moz-placeholder {
  color: #999999;
}

.c1:-ms-input-placeholder {
  color: #999999;
}

.c1::placeholder {
  color: #999999;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      placeholder="Enter Email Address"
      type="email"
    />
  </div>
</div>
`;

exports[`Input component should render correctly with all the props given 1`] = `
.c1 {
  margin: 0px 8px 8px 0px;
  color: #012040;
  display: block;
}

.c1::after {
  color: red;
  content: ' *';
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  color: #818A91;
}

.c0 .c3 {
  display: block;
}

.c2 {
  padding: 10px;
  margin: 0px 8px 8px 0px;
  font-size: 14px;
  font-weight: 400;
  color: #012040;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 3px;
  width: 100%;
}

.c2:focus {
  border-color: #012040;
  outline: 0;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      required=""
    >
      Email Address
    </label>
    <input
      class="c2"
      label="Email Address"
      placeholder="Enter Email Address"
      required=""
      type="email"
    />
    <span
      class="c3 c4"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;
